--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ test = ["nox"]
 python = ">=3.9"
 chardet = "^5.2.0"
 pyyaml = "^6.0.2"
+pydantic-settings = "^2.5.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.1"
