--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ test = ["nox"]
 [tool.poetry.dependencies]
 python = ">=3.9"
 chardet = "^5.2.0"
-pydantic-settings = "^2.5.2"
+omegaconf = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.1"
