feat: allow to exclude unicode chars (#5)
* feat: allow to exclude unicode chars

* Fixed linting errors

* Fixed confusing code for check, log and return code

* First try using pedantic settings

* Fixed pre-commit checks

* Fixed config file and CLI parsing and all tests pass!

* Edited README

* Fixed linting errors

* Fixed linting errors

* Removed line length checks as it is more obstructing than helping in md files

* Restored markdown length rule and formatted README.md

* Added shortened flags

* Put config logic in separate method

* Expanded unit tests for configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ test = ["nox"]
 [tool.poetry.dependencies]
 python = ">=3.9"
 chardet = "^5.2.0"
+omegaconf = "^2.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.2.1"
