--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,14 @@ repository = "https://github.com/svdimchenko/ski-lint/"
 # https://pypi.org/pypi?%3Aaction=list_classifiers
 classifiers = [
 	"Programming Language :: Python",
+	"Programming Language :: Python :: 3.9",
+	"Programming Language :: Python :: 3.10",
+	"Programming Language :: Python :: 3.11",
+	"Programming Language :: Python :: 3.12",
+	"Programming Language :: Python :: 3.13",
 	"Topic :: Software Development :: Libraries :: Python Modules",
 	"Development Status :: 4 - Beta",
-	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+	"License :: OSI Approved :: MIT License",
 ]
 
 [tool.poetry.scripts]
